feat: service ready
